--- a/parco etna.html
+++ b/parco etna.html
@@ -7,29 +7,23 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <p><a href="index.html">I PARCHI D’ITALIA</a></p>
-        <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="parchi.html">Parchi</a></li>
-            <li><a href="attività ed esperienze.html">Attività ed esperienze</a></li>
-            
-        </ul>
-        </nav>
-   </header>
-   <section class="uno">
-    <div class="testo-hero">
-        <div class="contenitore-testo-hero">
-            <h1>Parco dell'Etna</h1>
-            <p>Un vulcano attivo che incontra boschi rigogliosi: scopri la potenza e il fascino unico dell’Etna.</p>
+    <section class="header-contenitore-etna">
+        <div class="testo">
+            <div class="nav-bar">
+                <p><a href="index.html">PARCHI D'ITALIA</a></p>
+                <a href="index.html">HOME</a>
+                <a href="parchi.html">PARCHI</a>
+                <a href="attività ed esperienze.html">ATTIVITÀ ED ESPERIENZE</a>
+            </div>
+            <div class="content">
+                <h1>Parco dell’Etna</h1>
+                <p>Un vulcano attivo che incontra boschi rigogliosi: scopri la potenza e il fascino unico dell’Etna.</p>
+            </div>
         </div>
-    </div>
-
-    <div class="img-hero">
-        <img src="img/parco etna section hero.jpeg" alt="">
-    </div>
-</section>
+        <div class="prova-img">
+            <img src="img/parco etna section hero.jpeg" alt="" srcset="">
+        </div>
+    </section>
     <main>
         <section class="carte">
             <div class="carte-layout">
