--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
   
     <div class="paragrafo">
-        <p>I <strong>I parchi naturali italiani</strong> sono un tesoro di ecosistemi ricchi, paesaggi mozzafiato e unici legami tra uomo e ambiente. <br> Scopri <strong>  flora, fauna e le storie </strong> che rendono speciale ogni angolo protetto del nostro Paese. sono un tesoro di ecosistemi ricchi, paesaggi mozzafiato e unici legami tra uomo e ambiente.</strong> <br> Scopri flora, fauna e le storie che rendono speciale ogni angolo protetto del nostro Paese.parchi naturali italiani sono un tesoro di ecosistemi ricchi, paesaggi mozzafiato e unici legami tra uomo e ambiente.</strong> <br> Scopri flora, fauna e le storie che rendono speciale ogni angolo protetto del nostro Paese.</p>
+        <p>I <strong>I parchi naturali italiani</strong> sono un tesoro di ecosistemi ricchi, paesaggi mozzafiato e unici legami tra uomo e ambiente. <br> Scopri <strong>  flora, fauna e le storie </strong> che rendono speciale ogni angolo protetto del nostro Paese.</p>
     </div>
      
     <div class="nome-sezione">
