--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <section class="header-contenitore">
         <div class="testo">
             <div class="nav-bar">
-                <p><a href="index.html">PARCHI D'ITALIA</a></p>
-                <a href="index.html">HOME</a>
-                <a href="parchi.html">PARCHI</a>
-                <a href="attività ed esperienze.html">ATTIVITÀ ED ESPERIENZE</a>
-            </div>
+             <a class="logo" href="index.html">PARCHI D'ITALIA</a>
+             <a href="index.html">HOME</a>
+             <a href="parchi.html">PARCHI</a>
+             <a href="attività ed esperienze.html">ATTIVITÀ ED ESPERIENZE</a>
+          </div>
+
             <div class="content">
                 <h1>Esplora i parchi d’Italia</h1>
                 <p>Biodiversità, paesaggi, tradizioni, natura, cultura.</p>
