--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
   <main>
     <section class="header-contenitore">
         <div class="testo">
-            <div class="nav-bar">
-             <a class="logo" href="index.html">PARCHI D'ITALIA</a>
+          <div class="nav-bar">
+             <p><a href="index.html">PARCHI D'ITALIA</a></p>
+            <nav>
              <a href="index.html">HOME</a>
              <a href="parchi.html">PARCHI</a>
              <a href="attività ed esperienze.html">ATTIVITÀ ED ESPERIENZE</a>
+             </nav>
+
           </div>
 
             <div class="content">
