--- a/index.html
+++ b/index.html
@@ -10,16 +10,12 @@
   <main>
     <section class="header-contenitore">
         <div class="testo">
-          <div class="nav-bar">
-             <p><a href="index.html">PARCHI D'ITALIA</a></p>
-            <nav>
-             <a href="index.html">HOME</a>
-             <a href="parchi.html">PARCHI</a>
-             <a href="attività ed esperienze.html">ATTIVITÀ ED ESPERIENZE</a>
-             </nav>
-
-          </div>
-
+            <div class="nav-bar">
+                <p><a href="index.html">PARCHI D'ITALIA</a></p>
+                <a href="index.html">HOME</a>
+                <a href="parchi.html">PARCHI</a>
+                <a href="attività ed esperienze.html">ATTIVITÀ ED ESPERIENZE</a>
+            </div>
             <div class="content">
                 <h1>Esplora i parchi d’Italia</h1>
                 <p>Biodiversità, paesaggi, tradizioni, natura, cultura.</p>
@@ -28,10 +24,11 @@
         <div class="prova-img">
             <img src="img/home section hero.jpg" alt="" srcset="">
         </div>
-    </section>
+    </section> 
   
     <div class="paragrafo">
-        <p>I <strong>I parchi naturali italiani</strong> sono un tesoro di ecosistemi ricchi, paesaggi mozzafiato e unici legami tra uomo e ambiente. <br> Scopri <strong>  flora, fauna e le storie </strong> che rendono speciale ogni angolo protetto del nostro Paese.</p>
+        <p>I <strong>I parchi naturali italiani</strong> sono un tesoro di ecosistemi ricchi, paesaggi mozzafiato e unici legami tra uomo e ambiente.</p>
+        <p>Scopri <strong>  flora, fauna e le storie </strong> che rendono speciale ogni angolo protetto del nostro Paese.</p>
     </div>
      
     <div class="nome-sezione">
