--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="testo">
             <div class="nav-bar">
                 <p><a href="index.html">PARCHI D'ITALIA</a></p>
-                <a href="index.html">HOME</a>
-                <a href="parchi.html">PARCHI</a>
-                <a href="attività ed esperienze.html">ATTIVITÀ ED ESPERIENZE</a>
+                <a href="index.html">Home</a>
+                <a href="parchi.html">Parchi</a>
+                <a href="attività ed esperienze.html">Attività ed esperienze</a>
             </div>
             <div class="content">
                 <h1>Esplora i parchi d’Italia</h1>
@@ -50,7 +50,7 @@
               <img src="img/parco sila card.jpg" alt="">
           </div>
           <div class="text">
-              <p><a href="parco sila.html">Nazionale della Sila</a></p>
+              <p><a href="parco sila.html">Parco Nazionale della Sila</a></p>
           </div>
       </div>
   
@@ -77,7 +77,7 @@
               <img src="img/parco abruzzo card.jpg" alt="">
           </div>
           <div class="text">
-              <p><a href="parco abruzzo.html">Parco Nazionale d’Abruzzo, Lazio e Molise</a></p>
+              <p><a href="parco abruzzo.html">Parco Nazionale d’Abruzzo,Lazio e Molise</a></p>
           </div>
       </div>
   </section>
