--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I parchi d'Italia</title>
+    <title>I Parchi d'Italia</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -91,10 +91,10 @@
         <div class="box-testo">
         
           <p>
-            I parchi nazionali italiani offrono un’ampia gamma di opportunità per vivere momenti a contatto con la natura,
-            integrando aspetti ricreativi, educativi e culturali.
+            I parchi nazionali italiani offrono un’<strong>ampia gamma di opportunità</strong> per vivere momenti a contatto con la natura,
+            integrando aspetti <strong>ricreativi, educativi e culturali.</strong>
           </p>
-          <a href="attività ed esperienze.html">Vedi di più...</a>
+          <a href="attività ed esperienze.html"><strong>Vedi di più...</strong></a>
         </div>
       
         <div class="box-immagini">
