Update parco arcipelago toscano.html

--- a/parco arcipelago toscano.html
+++ b/parco arcipelago toscano.html
@@ -11,9 +11,9 @@
         <div class="testo">
             <div class="nav-bar">
                 <p><a href="index.html">PARCHI D'ITALIA</a></p>
-                <a href="index.html">HOME</a>
-                <a href="parchi.html">PARCHI</a>
-                <a href="attività ed esperienze.html">ATTIVITÀ ED ESPERIENZE</a>
+                <a href="index.html">Home</a>
+                <a href="parchi.html">Parchi</a>
+                <a href="attività ed esperienze.html">Attività ed esperienze</a>
             </div>
             <div class="content">
                 <h1>Parco Nazionale dell’Arcipelago Toscano</h1>
