Update attività ed esperienze.html

--- a/attività ed esperienze.html
+++ b/attività ed esperienze.html
@@ -11,9 +11,9 @@
         <div class="testo">
             <div class="nav-bar">
                 <p><a href="index.html">PARCHI D'ITALIA</a></p>
-                <a href="index.html">HOME</a>
-                <a href="parchi.html">PARCHI</a>
-                <a href="attività ed esperienze.html">ATTIVITÀ ED ESPERIENZE</a>
+                <a href="index.html">Home</a>
+                <a href="parchi.html">Parchi</a>
+                <a href="attività ed esperienze.html">Attività ed esperienze</a>
             </div>
             <div class="content">
                 <h1>Attività ed esperienze</h1>
@@ -34,7 +34,7 @@
                     <div class="content-carte">
                         <div class="p-carte">
                             <p>I <strong>parchi nazionali italiani</strong> offrono un’ampia gamma di opportunità per vivere momenti a contatto con la <strong>natura</strong>, integrando aspetti <strong>ricreativi</strong>, <strong>educativi</strong> e <strong>culturali</strong>. <strong>Escursioni</strong> e <strong>trekking</strong> rappresentano spesso la prima scelta: molti itinerari sono mappati e ben segnalati, con diversi gradi di difficoltà, così da soddisfare sia gli appassionati di lunghe camminate sui sentieri alpini o appenninici, sia chi cerca percorsi più dolci fra <strong>boschi secolari</strong> o tratti costieri panoramici. Lungo il cammino, non è raro imbattersi in <strong>centri visita</strong> e punti informativi dove <strong>guide specializzate</strong> forniscono dettagli su <strong>flora</strong>, <strong>fauna</strong> e <strong>geologia</strong> dell’area.</p>
-                            Istituito nel 1995, il parco protegge non solo il cono vulcanico, ma anche un territorio di grande ricchezza paesaggistica, dove si alternano boschi, colate laviche antiche, vigneti rigogliosi e insediamenti rurali. L’obiettivo principale è salvaguardare questo ambiente unico, in cui il clima mediterraneo incontra la forza primordiale della terra, creando un ecosistema dinamico e vario.</p>
+                            <p>Istituito nel <strong>1995</strong>, il parco protegge non solo il <strong>cono vulcanico</strong>, ma anche un territorio di grande ricchezza paesaggistica, dove si alternano <strong>boschi, colate laviche antiche, vigneti rigogliosi e insediamenti rurali.</strong> L’obiettivo principale è salvaguardare questo ambiente unico, in cui il clima mediterraneo incontra la forza primordiale della terra, creando un <strong>ecosistema dinamico e vario.</strong></p>
 
                             <p>Per coloro che desiderano un approccio più strutturato, <strong>visite guidate</strong> e <strong>laboratori didattici</strong> consentono di approfondire tematiche come la <strong>conservazione degli ecosistemi</strong>, la <strong>storia geologica</strong> delle montagne o la <strong>tutela di specie in pericolo</strong>. Queste attività sono spesso rivolte a <strong>scuole</strong>, <strong>famiglie</strong> o <strong>gruppi organizzati</strong>, con possibilità di sperimentare <strong>laboratori di educazione ambientale</strong> sul campo o <strong>workshop pratici</strong> (ad esempio, sul riconoscimento delle tracce animali o sull’orientamento in montagna).</p>
 
