--- a/parchi.html
+++ b/parchi.html
@@ -12,7 +12,7 @@
             <div class="nav-bar">
                 <p><a href="index.html">PARCHI D'ITALIA</a></p>
                 <a href="index.html">Home</a>
-                <a href="parchi.html">PAarchi</a>
+                <a href="parchi.html">Parchi</a>
                 <a href="attività ed esperienze.html">Attività ed esperienze</a>
             </div>
             <div class="content">
