--- a/index.html
+++ b/index.html
@@ -36,48 +36,53 @@
     </div>
 
     <section class="card">
+     <a href="parco etna.html">
       <div class="card-box">
           <div class="img">
               <img src="img/parco etna crad home.jpg" alt="">
           </div>
           <div class="text">
-              <p><a href="parco etna.html"> Parco dell’Etna</a></p>
+              <p> Parco dell’Etna</p>
           </div>
       </div>
-  
+
+     <a href="parco sila.html">
       <div class="card-box">
           <div class="img">
               <img src="img/parco sila card.jpg" alt="">
           </div>
           <div class="text">
-              <p><a href="parco sila.html">Parco Nazionale della Sila</a></p>
+              <p>Parco Nazionale della Sila</p>
           </div>
       </div>
-  
+
+     <a href="parco vesuvio.html">
       <div class="card-box">
           <div class="img">
               <img src="img/parco vesuvio card.jpg" alt="">
           </div>
           <div class="text">
-              <p><a href="parco vesuvio.html">Parco Nazionale del Vesuvio</a></p>
+              <p>Parco Nazionale del Vesuvio</p>
           </div>
       </div>
-  
+
+      <a href="parco arcipelago toscano.html">
       <div class="card-box">
           <div class="img">
               <img src="img/parco arcipelago toscano card.jpg" alt="">
           </div>
           <div class="text">
-              <p><a href="parco arcipelago toscano.html">Parco Nazionale dell’Arcipelago Toscano</a></p>
+              <p>Parco Nazionale dell’Arcipelago Toscano<</p>
           </div>
       </div>
-  
+
+       <a href="parco abruzzo.html">   
       <div class="card-box">
           <div class="img">
               <img src="img/parco abruzzo card.jpg" alt="">
           </div>
           <div class="text">
-              <p><a href="parco abruzzo.html">Parco Nazionale d’Abruzzo,Lazio e Molise</a></p>
+              <p>Parco Nazionale d’Abruzzo,Lazio e Molise</p>
           </div>
       </div>
   </section>
