--- a/index.html
+++ b/index.html
@@ -35,57 +35,62 @@
         <h1>Parchi in evidenza</h1>   
     </div>
 
-    <section class="card">
-     <a href="parco etna.html">
-      <div class="card-box">
-          <div class="img">
-              <img src="img/parco etna crad home.jpg" alt="">
-          </div>
-          <div class="text">
-              <p> Parco dell’Etna</p>
-          </div>
+  <section class="card">
+  <a href="parco etna.html">
+    <div class="card-box">
+      <div class="img">
+        <img src="img/parco etna crad home.jpg" alt="">
       </div>
+      <div class="text">
+        <p>Parco dell’Etna</p>
+      </div>
+    </div>
+  </a>
 
-     <a href="parco sila.html">
-      <div class="card-box">
-          <div class="img">
-              <img src="img/parco sila card.jpg" alt="">
-          </div>
-          <div class="text">
-              <p>Parco Nazionale della Sila</p>
-          </div>
+  <a href="parco sila.html">
+    <div class="card-box">
+      <div class="img">
+        <img src="img/parco sila card.jpg" alt="">
       </div>
+      <div class="text">
+        <p>Parco Nazionale della Sila</p>
+      </div>
+    </div>
+  </a>
 
-     <a href="parco vesuvio.html">
-      <div class="card-box">
-          <div class="img">
-              <img src="img/parco vesuvio card.jpg" alt="">
-          </div>
-          <div class="text">
-              <p>Parco Nazionale del Vesuvio</p>
-          </div>
+  <a href="parco vesuvio.html">
+    <div class="card-box">
+      <div class="img">
+        <img src="img/parco vesuvio card.jpg" alt="">
       </div>
+      <div class="text">
+        <p>Parco Nazionale del Vesuvio</p>
+      </div>
+    </div>
+  </a>
 
-      <a href="parco arcipelago toscano.html">
-      <div class="card-box">
-          <div class="img">
-              <img src="img/parco arcipelago toscano card.jpg" alt="">
-          </div>
-          <div class="text">
-              <p>Parco Nazionale dell’Arcipelago Toscano<</p>
-          </div>
+  <a href="parco arcipelago toscano.html">
+    <div class="card-box">
+      <div class="img">
+        <img src="img/parco arcipelago toscano card.jpg" alt="">
       </div>
+      <div class="text">
+        <p>Parco Nazionale dell’Arcipelago Toscano</p>
+      </div>
+    </div>
+  </a>
 
-       <a href="parco abruzzo.html">   
-      <div class="card-box">
-          <div class="img">
-              <img src="img/parco abruzzo card.jpg" alt="">
-          </div>
-          <div class="text">
-              <p>Parco Nazionale d’Abruzzo,Lazio e Molise</p>
-          </div>
+  <a href="parco abruzzo.html">
+    <div class="card-box">
+      <div class="img">
+        <img src="img/parco abruzzo card.jpg" alt="">
       </div>
-  </section>
+      <div class="text">
+        <p>Parco Nazionale d’Abruzzo, Lazio e Molise</p>
+      </div>
+    </div>
+  </a>
+</section>
   
     <div class="nome-sezione">
         <h1>Attività ed esperienze</h1>   
