--- a/parchi.html
+++ b/parchi.html
@@ -26,7 +26,8 @@
     </section>
   
     <div class="paragrafo">
-        <p>Scopri i <strong>12 parchi nazionali italiani</strong>, un mosaico di <strong>montagne</strong>, <strong>mari</strong> e <strong>foreste</strong> di inestimabile valore. <br> Ogni area protetta racconta storie di <strong>biodiversità</strong>, <strong>paesaggi unici</strong> e <strong>tradizioni centenarie</strong> da vivere e rispettare. <strong>Avventure</strong> e <strong>meraviglie</strong> attendono.</p>
+        <p>Scopri i <strong>12 parchi nazionali italiani</strong>, un mosaico di <strong>montagne</strong>, <strong>mari</strong> e <strong>foreste</strong> di inestimabile valore.</p>
+        <p>Ogni area protetta racconta storie di <strong>biodiversità</strong>, <strong>paesaggi unici</strong> e <strong>tradizioni centenarie</strong> da vivere e rispettare. <strong>Avventure</strong> e <strong>meraviglie</strong> attendono.</p>
     </div>
     
    
